objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_ID_case_sensitive__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity ID (case sensitive)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Finish_Date__c</fullName>
        <description>For Customer Requests</description>
        <label>Actual Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>For Customer Requests</description>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bulletin_Delivery_Job__c</fullName>
        <label>Bulletin Delivery Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Area</label>
        <picklist>
            <controllingField>Danfoss_Division__c</controllingField>
            <picklistValues>
                <fullName>Building Societies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burner Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Climate Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comatrol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condensing Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contactors &amp; Motor Starters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractor/Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss Link™</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decentral Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Differential P and F Controllers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic Hot Water Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Filter Driers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frequency Converters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Exchangers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Pumps and Water Heater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Power CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Power OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hydrogear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated Servo Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor/ Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Power</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Closing_Comments__c</fullName>
        <description>Explain the task that was completed.</description>
        <inlineHelpText>Explanation of Completed Task</inlineHelpText>
        <label>Closing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Customer Request BU task completion</description>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <inlineHelpText>set in TaskTriggerHandler for non- Contract PS tasks</inlineHelpText>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Approved_Time__c</fullName>
        <label>Contract Approved Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Action__c</fullName>
        <label>Expiration Action</label>
        <picklist>
            <picklistValues>
                <fullName>Renew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Renew</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Extension_End_Date__c</fullName>
        <label>Extension End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Instructions__c</fullName>
        <label>Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Previous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Previous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Stage__c</fullName>
        <label>Contract Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Danfoss_Division__c</fullName>
        <description>List to segment divisions for Activities</description>
        <label>Danfoss Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Power Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100, &quot;Key Event/Task Details Captured&quot;,&quot;Missing: &quot;&amp;IF( LEN( Subject ) &lt; 3,&quot;Quality Subject Description, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhoId)=0,&quot;Contact/Lead Reference, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(WhatId)=0,&quot;Account/Opportunity Reference&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN(  Subject  ) &lt; 3, 0,30) + IF( LEN(  WhoId ) = 0, 0,40) + IF( LEN(  WhatId ) = 0, 0,30)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Before_Today_in_Month__c</fullName>
        <formula>IF( 1+(ActivityDate-(DATEVALUE(TEXT(YEAR(ActivityDate)) + &quot;-&quot; + TEXT(MONTH(ActivityDate)) + &quot;-&quot; + &quot;01&quot;))) 
&lt;= 
(1+TODAY()-(DATEVALUE(TEXT(YEAR(TODAY())) + &quot;-&quot; + TEXT(MONTH(TODAY())) + &quot;-&quot; + &quot;01&quot;))) 
, TRUE 
, FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Before Today in Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_before_Today_in_Quarter__c</fullName>
        <formula>IF( 
CASE( 
IF( MONTH(ActivityDate) &lt;=3, &quot;Q1&quot;, 
IF( MONTH(ActivityDate) &lt;=6, &quot;Q2&quot;, 
IF( MONTH(ActivityDate) &lt;=9, &quot;Q3&quot;, 
&quot;Q4&quot; 
))) , 
&quot;Q1&quot;, ActivityDate-DATE(YEAR(ActivityDate), 1, 1) + 1, 
&quot;Q2&quot;, ActivityDate-DATE(YEAR(ActivityDate), 4, 1) + 1, 
&quot;Q3&quot;, ActivityDate-DATE(YEAR(ActivityDate), 7, 1) + 1, 
ActivityDate-DATE(YEAR(ActivityDate), 10, 1) + 1 
) 
&lt;= 
CASE( IF( MONTH(TODAY()) &lt;=3, &quot;Q1&quot;, 
IF( MONTH(TODAY()) &lt;=6, &quot;Q2&quot;, 
IF( MONTH(TODAY()) &lt;=9, &quot;Q3&quot;, 
&quot;Q4&quot; 
))) , 
&quot;Q1&quot;, TODAY()-DATE(YEAR(TODAY() ), 1, 1) + 1, 
&quot;Q2&quot;, TODAY()-DATE(YEAR(TODAY() ), 4, 1) + 1, 
&quot;Q3&quot;, TODAY()-DATE(YEAR(TODAY() ), 7, 1) + 1, 
TODAY()-DATE(YEAR(TODAY() ), 10, 1) + 1 
) 
, TRUE 
, FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date before Today in Quarter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_before_Today_in_Year__c</fullName>
        <formula>IF( 
(1+(ActivityDate- (DATEVALUE( TEXT(YEAR(ActivityDate)) + &quot;-01-01&quot; )))) 
&lt;= 
(1+(TODAY()- (DATEVALUE(TEXT(YEAR(TODAY()))+ &quot;-01-01&quot; )))) 
, TRUE 
, FALSE 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date before Today in Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_Formula__c</fullName>
        <formula>TEXT(Owner:User.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Danfoss Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Start_Date__c</fullName>
        <description>For Customer Requests</description>
        <label>Est. Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Events_Notes__c</fullName>
        <label>Events Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Include_in_Comatrol_Weekly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Comatrol Weekly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_in_DOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in DOW / Activity Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ACD__c</fullName>
        <description>The name of the ACD the call was delivered from</description>
        <label>ACD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_End_Time__c</fullName>
        <description>The time in Contact World that the call ended</description>
        <label>CW Call End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__CW_Call_Start_Time__c</fullName>
        <description>The time shown in Contact World when the call first hit your call plan</description>
        <label>CW Call Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__ContactWorld_Number__c</fullName>
        <description>The contact world number relating to this call.  In the case of an inbound call this would be the number dialled by the caller.  For an outbound call this would be the number presented to the person being called.</description>
        <label>ContactWorld Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Customer_Number__c</fullName>
        <description>The customer number.  In the case of an inbound call this will be the calling line id.  For an outbound this will be the number that the agnet has called.</description>
        <label>Customer Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Service_Name__c</fullName>
        <description>The service name that the call came from</description>
        <label>Service Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Participants__c</fullName>
        <description>Enter the Number of Participants at an event</description>
        <inlineHelpText>HS Only - Number of Participants trained or at a Group Meeting</inlineHelpText>
        <label>Number of Participants</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <inlineHelpText>Reviewer Order</inlineHelpText>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Closing_Comments__c</fullName>
        <inlineHelpText>Enter any relevant comments prior to closing this activity.</inlineHelpText>
        <label>Partner Closing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <label>Partner Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <description>A copy of the ActivityDate field to be used in reporting</description>
        <formula>ActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Same as &quot;Date&quot;. To be able to use same field twice in reporting. Once for close quarter, and one for exact date</inlineHelpText>
        <label>Reporting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Activity_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP Activity ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type_Category__c</fullName>
        <label>Type Category</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Sales Meeting</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Group Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibition/Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call outbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial/Logistical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2F Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2F Training - Installer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2F Training - Wholesaler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F2F Training - Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Custom field type to allow dependent drop down</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Visit</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Trip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for triggering an email to the assignee for tasks created via upload. Should not appear on page layouts</description>
        <label>Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <formula>$User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UserID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>allMID_relevant_information__c</fullName>
        <inlineHelpText>Select &apos;Yes&apos; if the information contains AllMID relevant details that are not already covered in relation to an opportunity</inlineHelpText>
        <label>AllMID Relevant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pi__pardot_source_id__c</fullName>
        <description>Identifies the Pardot record that caused this activity to be created.</description>
        <externalId>true</externalId>
        <label>Pardot Source Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>project_cloud__Hours__c</fullName>
        <description>The number of hours the owner has been allocated to work on the Project Task</description>
        <label>Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>